Configurando tela para section e refatoração de princpial para --> homeController dentre outros

--- a/public/css/estilo_basico.css
+++ b/public/css/estilo_basico.css
@@ -133,7 +133,7 @@ button:hover {
     margin: 100px 40px 40px 40px;
 }
 
-.contato-principal {
+.contato-Home {
     margin: 0px 60px 60px 40px;
 }
 
